--- a/trend.html
+++ b/trend.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
@@ -27,7 +29,7 @@
           <div><img src="images/loging logo.png" alt="login" id="logoimg" title="Login"></div>
           <div><a href="login.html" class="linksanchor">Login</a></div>
           <div><img src="images/shopping logo.png" alt="shopping" id="logoimg" title="Cart"></div>
-          <div><a href="shopping cart.html" class="linksanchor">Shopping cart</a></div>
+          <div><a href="shoppingcart.html" class="linksanchor">Shopping cart</a></div>
         </div>
       </div>
     <!--Navigation Bar Ends here-->
@@ -39,25 +41,105 @@
     </div>
     <!-- Content of the page starts here -->
     <div id="trendreport">
+      <br>
+      <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+          </div>
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <div class="center1">
+                      <img src="images/img1.jpg" class="d-block size1" alt="...">
+                      <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="center1">
+                      <img src="images/img2.jpg" class="d-block size1" alt="...">
+                      <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="center1">
+                      <img src="images/img3.jpg" class="d-block size1" alt="...">
+                      <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="center1">
+                      <img src="images/img4.jpg" class="d-block size1" alt="...">
+                      <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="center1">
+                      <img src="images/img5.jpg" class="d-block size1" alt="...">
+                      <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="center1">
+                      <img src="images/img6.jpg" class="d-block size1" alt="...">
+                      <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="center1">
+                      <img src="images/img7.jpg" class="d-block size1" alt="...">
+                      <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+              </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
+      </div>
+  </div>
+  
+    <div class="trendreport">
       <div><img src="images/trendreport_page-0001.jpg" alt="trend" class="reportcover" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0002.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0003.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0004.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0005.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0006.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0007.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0008.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0009.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0010.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0011.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0012.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0013.jpg" alt="trend" class="report" title="report"></div>
+      <br>
       <div><img src="images/trendreport_page-0014.jpg" alt="trend" class="report" title="report"></div>
-      <div><img src="images/trendreport_page-0015.jpg" alt="trend" class="report" title="report"></div>
-      <div><img src="images/trendreport_page-0016.jpg" alt="trend" class="report" title="report"></div>
+      <br>
+    </div>
     </div>
     <!-- Content of the page ends here -->
-    <!-- <hr class="hr1"> -->
+    
     <!-- Footer starts here -->
     <div id="footer">
       <div id="footerlinks">
